--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 # 起始 URL（换成您自己的域名）
 baseURL: 'https://blog.makura.cc'
 # 网站标题
-title: 'Hugo Start'
+title: '一时兴起的Makura的博客'
 # 每页显示的文章数量
 paginate: 5
 # 主题名称
@@ -46,7 +46,7 @@ params:
   # keywords: [Blog, Portfolio, PaperMod]
 
   # 网站作者
-  author: 'Your Name'
+  author: 'Makura'
   # 多个作者写法
   # author: ["Me", "You"]
 
@@ -76,7 +76,7 @@ params:
   # 是否禁用首页滚动到顶部
   disableScrollToTop: false
   # 是否启用评论系统
-  comments: false
+  comments: true
   # 是否隐藏 Meta 信息
   hidemeta: false
   # 是否隐藏文章摘要
@@ -131,10 +131,10 @@ params:
 
   #  主页 - 信息模式 图标展示
   socialIcons:
-    # - name: twitter
-    #   url: "https://twitter.com/"
-    # - name: stackoverflow
-    #   url: "https://stackoverflow.com"
+    - name: twitter
+      url: "https://twitter.com/"
+    - name: stackoverflow
+      url: "https://stackoverflow.com"
     - name: github
       url: 'https://github.com/nicosuki123/hugo-start'
     #    - name: mastodon
@@ -189,7 +189,7 @@ menu:
       weight: 20
     - identifier: '仓库'
       name: '仓库'
-      url: https://github.com/DejavuMoe/hugo-start
+      url: https://github.com/nicosuki123/hugo-start
       weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
