--- a/config.yml
+++ b/config.yml
@@ -39,9 +39,9 @@ minify:
 params:
   env: production
   # 网站标题
-  title: 'Hugo Start'
+  title: 'Makura’s Blog'
   # 网站描述
-  description: 'Hugo Start with PaperMod'
+  description: 'What is mind? No matter. What is matter? Never mind.'
   # 网站关键词（大部分搜索引擎已放弃，可注释掉）
   # keywords: [Blog, Portfolio, PaperMod]
 
